feat[mvi]: 融合mvi架构flow流

--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="cc">#30353A</color>
-    <color name="cc1">#FF14171A</color>
+    <color name="cc">#FFFFFFF2</color>
+    <color name="cc1">#9874F0FF</color>
 </resources>
