--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="cc1">#E0E0E0</color>
-    <color name="cc">#2B62CA</color>
+    <color name="cc">#2C2E2F</color>
 </resources>
