--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -1,3 +1,11 @@
 <resources>
     <style name="AppTheme" parent="android:Theme.Material.NoActionBar"/>
+<!--    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar" >-->
+<!--        <item name="android:colorPrimary">#ff464F5C</item>-->
+<!--    </style>-->
+
+<!--    <style name="AppTheme.Dark" parent="Theme.AppCompat" >-->
+<!--        <item name="android:colorPrimary">#E9E8E8FF</item>-->
+<!--    </style>-->
+<!--    <style name="AppTheme.Dark" parent="Theme.AppCompat.DayNight.NoActionBar"-->
 </resources>
