fix(删除会话): 删除会话，消息界面未同步，深度搜索样式

--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="cc1">#E0E0E0</color>
-    <color name="cc">#3B3C3D</color>
+    <color name="cc">#629DE8</color>
 </resources>
